# MLHoudiniSamples

./: LICENSE  README.md
ML0001_MNIST_Test/: ml_houdini_v001.hipnc
ML0001_MNIST_Test/houdini/python2.7libs/: mnist.py
ML0001_MNIST_Test/houdini/python2.7libs/data/: convolutional.ckpt.index
ML0002_PyTorchPlugin/: CMakeLists.txt  SOP_PyTorchTest.C  SOP_PyTorchTest.h
ML0003_TensorFlowPlugin/: CMakeLists.txt  SOP_TensorFlowTest.C  SOP_TensorFlowTest.h  hdk_pytorchtest.txt
ML0003_TensorFlowPlugin/for_tensorflow/cmake/: TensorFlowConfig.cmake  TensorFlowConfigVersion.cmake
